# videoplayer

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
executable/: FrameMainDerived.cpp  FrameMainDerived.h  MainExecutable.cpp  MainExecutable.fbp  MainExecutable.h  MainExecutablePanelMain.cpp  MainExecutablePanelMain.h  WxMain.cpp  WxMain.h
lib/include/: Config.h  HttpConf.h  HttpGet.h  HttpGetResult.h  PlayerTime.h  cmake_conf.h.in  file_exists.h  format_time.h  get_config_file_full_name.h  get_file_names_from_path.h  get_pause_request_json.h  get_play_request_json.h  get_stop_request_json.h  get_time_request_json.h  http_get_player_percentage.h  http_get_video_dir.h  http_get_video_files.h  map_to_json.h  modern.h  parse_file_list.h  parse_http_content_length.h  parse_json_percentage.h  parse_json_settings.h  parse_json_time.h  parse_video_dir.h  read_string_from_file.h  write_string_to_file.h
lib/src/: Config.cpp  HttpConf.cpp  HttpGet.cpp  PlayerTime.cpp  file_exists.cpp  format_time.cpp  get_config_file_full_name.cpp  get_file_names_from_path.cpp  get_pause_request_json.cpp  get_play_request_json.cpp  get_stop_request_json.cpp  get_time_request_json.cpp  http_get_player_percentage.cpp  http_get_video_dir.cpp  http_get_video_files.cpp  map_to_json.cpp  modern.cpp  parse_file_list.cpp  parse_http_content_length.cpp  parse_json_percentage.cpp  parse_json_settings.cpp  parse_json_time.cpp  parse_video_dir.cpp  read_string_from_file.cpp  write_string_to_file.cpp
linux-build/: VideoplayerProject_test  buildrel.sh
settings/: FormMain.cpp  FormMain.fbp  FormMain.h  FormMainDerived.cpp  FormMainDerived.h  FormMainPanelMain.cpp  FormMainPanelMain.h  MainApp.cpp  MainApp.h
test/: format_time_test.cpp  get_play_request_json_test.cpp  parse_file_list_test.cpp  parse_http_content_length_test.cpp  parse_json_percentage_test.cpp  parse_json_time_test.cpp  parse_video_dir_test.cpp  test-modern.cpp
win-mingw-build/: buildrel.bat
win-vs-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  VideoplayerProject.sln  VideoplayerProject_impl.vcxproj  VideoplayerProject_impl.vcxproj.filters  VideoplayerProject_test.vcxproj  VideoplayerProject_test.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  build.bat  gtest.vcxproj  gtest.vcxproj.filters  gtest_main.vcxproj  gtest_main.vcxproj.filters  videoplayer.vcxproj  videoplayer.vcxproj.filters  videoplayer_settings.vcxproj  videoplayer_settings.vcxproj.filters
